Fixed Clipping Issues.
Fixed an issue where the different sections would overlap when resizing the webpage.

--- a/styles.css
+++ b/styles.css
@@ -278,7 +278,7 @@ body.resizing .navbar__menu { visibility: hidden !important; opacity: 0 !importa
     background-color: #2c2b2b73;
     z-index: 1;
     width: 100%;
-    max-width: 2000px;
+    position: relative;
     padding: 0 50px;
     
     
@@ -370,12 +370,16 @@ body.resizing .navbar__menu { visibility: hidden !important; opacity: 0 !importa
 
 .main__img--container {
     text-align: center;
+    overflow: hidden;
 }
 
 #main__img {
     height: 100%;
     width: 100%;
     padding-left: 20px;
+    position: relative;
+    object-fit: cover;
+    padding: 50px;
 }
 
 /*Mobile Responsive */
@@ -390,6 +394,7 @@ body.resizing .navbar__menu { visibility: hidden !important; opacity: 0 !importa
         width: 100%;
         margin: 0 auto;
         height: 100vh;
+        position: relative;
     }
 
     .main__content {
@@ -448,8 +453,9 @@ body.resizing .navbar__menu { visibility: hidden !important; opacity: 0 !importa
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    position: relative;
     padding-top: 50px;
+    z-index: 2;
 }
 
 .services h1 {
@@ -564,8 +570,9 @@ body.resizing .navbar__menu { visibility: hidden !important; opacity: 0 !importa
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: -300px;
-    padding-top: 150px;
+    margin-top: 0;
+    padding-top: 5rem;
+    position: relative;
 }
 
 #footer__logo {
